--- a/gms.web/Views/GymUser/MembersList.cshtml
+++ b/gms.web/Views/GymUser/MembersList.cshtml
@@ -152,11 +152,14 @@
                             <!--end::Export Menu-->
                         </div>
                         <!--end::Export-->
-                        <!--begin::Add Member-->
-                        <a class="btn btn-primary d-flex align-items-center" asp-controller="GymUser" asp-action="CreateNewMember">
-                            <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_member"]
-                        </a>
-                        <!--end::Add Member-->
+                        @if (User.HasClaim(c => c.Type == "Permission" && c.Value == ManageMembersPermissions.Create))
+                        {
+                            <!--begin::Add Member-->
+                            <a class="btn btn-primary d-flex align-items-center" asp-controller="GymUser" asp-action="CreateNewMember">
+                                <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_member"]
+                            </a>
+                            <!--end::Add Member-->
+                        }
                     </div>
                     <!--end::Card toolbar-->
                 </div>
@@ -240,12 +243,18 @@
                                     </td>
                                     <td class="text-center">
                                         <div class="d-flex justify-content-center flex-shrink-0">
-                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-member-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@member.Id">
-                                                <i class="ki-solid ki-pencil fs-2"></i>
-                                            </button>
-                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2 delete-member-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse" data-id="@member.Id">
-                                                <i class="ki-solid ki-trash fs-2"></i>
-                                            </button>
+                                            @if (User.HasClaim(c => c.Type == "Permission" && c.Value == ManageMembersPermissions.Edit))
+                                            {
+                                                <button type="button" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-member-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@member.Id">
+                                                    <i class="ki-solid ki-pencil fs-2"></i>
+                                                </button>
+                                            }
+                                            @if (User.HasClaim(c => c.Type == "Permission" && c.Value == ManageMembersPermissions.Delete))
+                                            {
+                                                <button type="button" class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2 delete-member-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse" data-id="@member.Id">
+                                                    <i class="ki-solid ki-trash fs-2"></i>
+                                                </button>
+                                            }
                                         </div>
                                     </td>
                                 </tr>
