--- a/gms.web/Views/GymUser/StaffsList.cshtml
+++ b/gms.web/Views/GymUser/StaffsList.cshtml
@@ -84,11 +84,14 @@
 							<!--end::Export Menu-->
 						</div>
 						<!--end::Export-->
-						<!--begin::Add Staff-->
-						<a class="btn btn-primary d-flex align-items-center" asp-controller="GymUser" asp-action="CreateNewStaff">
-							<i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_staff"]
-						</a>
-						<!--end::Add Staff-->
+						@if (User.HasClaim(c => c.Type == "Permission" && c.Value == ManageStaffsPermissions.Create))
+						{
+							<!--begin::Add Staff-->
+							<a class="btn btn-primary d-flex align-items-center" asp-controller="GymUser" asp-action="CreateNewStaff">
+								<i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_staff"]
+							</a>
+							<!--end::Add Staff-->
+						}
 					</div>
 					<!--end::Card toolbar-->
 				</div>
@@ -158,12 +161,18 @@
 									</td>
 									<td class="text-center">
 										<div class="d-flex justify-content-center flex-shrink-0">
-											<button type="button" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-staff-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@staff.Id">
-												<i class="ki-solid ki-pencil fs-2"></i>
-											</button>
-											<button type="button" class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2 delete-staff-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse" data-id="@staff.Id">
-												<i class="ki-solid ki-trash fs-2"></i>
-											</button>
+											@if (User.HasClaim(c => c.Type == "Permission" && c.Value == ManageStaffsPermissions.Edit))
+											{
+												<button type="button" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-staff-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@staff.Id">
+													<i class="ki-solid ki-pencil fs-2"></i>
+												</button>
+											}
+											@if (User.HasClaim(c => c.Type == "Permission" && c.Value == ManageStaffsPermissions.Delete))
+											{
+												<button type="button" class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2 delete-staff-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse" data-id="@staff.Id">
+													<i class="ki-solid ki-trash fs-2"></i>
+												</button>
+											}
 										</div>
 									</td>
 								</tr>
