--- a/gms.web/Views/Roles/_EditRole.cshtml
+++ b/gms.web/Views/Roles/_EditRole.cshtml
@@ -34,7 +34,7 @@
                             <!--begin::Table row-->
                             <tr>
                                 <!--begin::Label-->
-                                <td class="text-gray-800">@p.Key</td>
+                                <td class="text-gray-800">@localizer[p.Key.ToString().ToLower()]</td>
                                 <!--end::Label-->
                                 <!--begin::Input group-->
                                 <td>
