--- a/gms.web/Views/Membership/Index.cshtml
+++ b/gms.web/Views/Membership/Index.cshtml
@@ -101,11 +101,14 @@
                             <!--end::Filter Menu-->
                         </div>
                         <!--end::Filter-->
-                        <!--begin::Add Membership-->
-                        <a href="@Url.Action("AddNewMembership", "Membership")" class="btn btn-primary d-flex align-items-center">
-                            <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_membership"]
-                        </a>
-                        <!--end::Add Membership-->
+                        @if (User.HasClaim(c => c.Type == "Permission" && c.Value == MembershipsPermissions.Create))
+                        {
+                            <!--begin::Add Membership-->
+                            <a href="@Url.Action("AddNewMembership", "Membership")" class="btn btn-primary d-flex align-items-center">
+                                <i class="ki-outline ki-plus fs-2"></i>@localizer["add_new_membership"]
+                            </a>
+                            <!--end::Add Membership-->
+                        }
                     </div>
                     <!--end::Card toolbar-->
                 </div>
@@ -150,12 +153,18 @@
                                     </td>
                                     <td class="text-center">
                                         <div class="d-flex justify-content-center flex-shrink-0">
-                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-membership-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@mp.Id" data-branch-id="@mp.BranchId">
-                                                <i class="ki-solid ki-pencil fs-2"></i>
-                                            </button>
-                                            <button type="button" class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2 delete-membership-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse" data-id="@mp.Id" data-branch-id="@mp.BranchId">
-                                                <i class="ki-solid ki-trash fs-2"></i>
-                                            </button>
+                                            @if (User.HasClaim(c => c.Type == "Permission" && c.Value == MembershipsPermissions.Edit))
+                                            {
+                                                <button type="button" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-membership-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@mp.Id" data-branch-id="@mp.BranchId">
+                                                    <i class="ki-solid ki-pencil fs-2"></i>
+                                                </button>
+                                            }
+                                            @if (User.HasClaim(c => c.Type == "Permission" && c.Value == MembershipsPermissions.Delete))
+                                            {
+                                                <button type="button" class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2 delete-membership-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse" data-id="@mp.Id" data-branch-id="@mp.BranchId">
+                                                    <i class="ki-solid ki-trash fs-2"></i>
+                                                </button>
+                                            }
                                             <!--begin::Menu-->
                                             <button type="button" class="btn btn-sm btn-icon btn-bg-light btn-light-info" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-@(IsRTL ? "start" : "end")" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["otheractions"]" data-bs-custom-class="tooltip-inverse">
                                                 <i class="ki-solid ki-setting-4 fs-2"></i>
