--- a/gms.web/Views/Membership/MembershipPayment.cshtml
+++ b/gms.web/Views/Membership/MembershipPayment.cshtml
@@ -106,25 +106,34 @@
                                     </td>
                                     <td class="text-center">
                                         <div class="d-flex justify-content-center flex-shrink-0">
-                                            <button class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-member-membership-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@mm.Id">
-                                                <i class="ki-solid ki-pencil fs-2"></i>
-                                            </button>
-                                            <button class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse">
-                                                <i class="ki-solid ki-trash fs-2"></i>
-                                            </button>
+                                            @if (User.HasClaim(c => c.Type == "Permission" && c.Value == SubscriptionsPaymentPermissions.Edit))
+                                            {
+                                                <button class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2 edit-member-membership-btn" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse" data-id="@mm.Id">
+                                                    <i class="ki-solid ki-pencil fs-2"></i>
+                                                </button>
+                                            }
+                                            @if (User.HasClaim(c => c.Type == "Permission" && c.Value == SubscriptionsPaymentPermissions.Delete))
+                                            {
+                                                <button class="btn btn-icon btn-bg-light btn-light-danger btn-sm me-2" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["delete"]" data-bs-custom-class="tooltip-inverse">
+                                                    <i class="ki-solid ki-trash fs-2"></i>
+                                                </button>
+                                            }
                                             <!--begin::Menu-->
                                             <button type="button" class="btn btn-sm btn-icon btn-bg-light btn-light-info" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-@(IsRTL ? "start" : "end")" data-bs-dismiss="click" data-bs-toggle="tooltip" title="@localizer["otheractions"]" data-bs-custom-class="tooltip-inverse">
                                                 <i class="ki-solid ki-setting-4 fs-2"></i>
                                             </button>
                                             <!--begin::Menu 3-->
                                             <div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-800 menu-state-bg-light-info fw-semibold w-200px py-3" data-kt-menu="true">
-                                                <!--begin::Menu item-->
-                                                <div class="menu-item px-3">
-                                                    <a class="menu-link px-3 add-payment-btn" data-price="@mm.Membership.MembershipAmount" data-piad-amount="@mm.PaidAmount" data-due-amount="@(mm.Membership.MembershipAmount - mm.PaidAmount)" data-signup-fee="@mm.Membership.SignupFee" data-id="@mm.Id">
-                                                        @localizer["add_payment"]
-                                                    </a>
-                                                </div>
-                                                <!--end::Menu item-->
+                                                @if (User.HasClaim(c => c.Type == "Permission" && c.Value == SubscriptionsPaymentPermissions.Create))
+                                                {
+                                                    <!--begin::Menu item-->
+                                                    <div class="menu-item px-3">
+                                                        <a class="menu-link px-3 add-payment-btn" data-price="@mm.Membership.MembershipAmount" data-piad-amount="@mm.PaidAmount" data-due-amount="@(mm.Membership.MembershipAmount - mm.PaidAmount)" data-signup-fee="@mm.Membership.SignupFee" data-id="@mm.Id">
+                                                            @localizer["add_payment"]
+                                                        </a>
+                                                    </div>
+                                                    <!--end::Menu item-->
+                                                }
                                                 <!--begin::Menu item-->
                                                 <div class="menu-item px-3">
                                                     <a class="menu-link px-3">
