--- a/gms.web/Views/_ViewImports.cshtml
+++ b/gms.web/Views/_ViewImports.cshtml
@@ -11,6 +11,7 @@
 @using gms.common.Models.Identity.Role;
 @using gms.common.Models.ActivityCat.Activity;
 @using gms.common.ViewModels.Activity;
+@using gms.common.Permissions;
 
 @inject IViewLocalizer localizer;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
